# dh-cmake

./: README.md  setup.py
debian/: changelog  control  rules
dh_cmake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dhcmake/: __init__.py  arch.py  cmake.py  common.py  cpack.py  ctest.py  deb822.py  dh_ctest_driver.cmake
dhcmake/tests/: __init__.py  cmake.py  common.py  cpack.py  ctest.py  deb822.py  source_check.py
dhcmake/tests/data/debian_pkg/: CMakeLists.txt  CTestConfig.cmake
dhcmake/tests/data/debian_pkg/debian/: changelog  cmake-components  cmake.mk  control  cpack.mk  ctest.mk  libdh-cmake-test-dev.cmake-components  libdh-cmake-test-dev.cpack-component-groups  libdh-cmake-test.cpack-components  rules
dhcmake/tests/data/debian_pkg/lib1/: CMakeLists.txt
dhcmake/tests/data/debian_pkg/lib2/: CMakeLists.txt
examples/cmake/: CMakeLists.txt  README.md
examples/cmake/debian/: changelog  control  copyright
examples/cpack/: CMakeLists.txt  README.md
examples/cpack/debian/: changelog  control
examples/ctest/: CMakeLists.txt  CTestConfig.cmake  README.md  test_hello.cmake
examples/ctest/debian/: changelog  control
sequence/: cmake.pm  cpack.pm  ctest.pm
